--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,11 @@
 *
 {
+    position: relative;
     margin: 0;
     padding: 0;
 }
 
-html,
-body
-{    
-    position: fixed;
-    overflow: hidden;
+#app {
+    width: 100%;
+    height: 100vh;
 }
